added button for resume

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="inner">
 				<!--	<a href="#" class="profile"><img src="images/pic01.jpeg" alt="" data-position="center center" /></a>-->
 				<h1>Annalise Sumpon</h1>
-				<h4> Mangement Science + Mathematics + Computer Engineering Student at Southern Methodist
+				<h4> B.S. Mangement Science + Mathematics + Computer Engineering Student at Southern Methodist
 					University
 				</h4>
 				<h4> Class of 2022
@@ -50,6 +50,7 @@
 				<br> <br />
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">About Me</a></li>
+					<li><a href="https://drive.google.com/file/d/1A8YSt89S-eC3VUK9lM494u3HW26dmDof/view?usp=sharing" class="button scrolly">View My Resume</a></li>
 				</ul>
 			</div>
 		</section>
@@ -178,7 +179,7 @@
 							attributes (descriptions and other known names)
 							<br></br>• Fetched and processed database PCDR which consists of 400+ nested entities which
 							each hold house 1000+ data elements.
-							<br></br>• Created own API using AWS API Gateway to integrate with an AWS Lambda function
+							<br></br>• Created own REST API using AWS API Gateway to integrate with an AWS Lambda function
 							which connected to the PCDR Database.
 						</p>
 						<!-- <span class="icon solid major fa-code"></span> -->
