updated minor issues

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="inner">
 				<!--	<a href="#" class="profile"><img src="images/pic01.jpeg" alt="" data-position="center center" /></a>-->
 				<h1>Annalise Sumpon</h1>
-				<h4> B.S. Mangement Science + Mathematics + Computer Engineering Student at Southern Methodist
+				<h4> B.S. Management Science + Mathematics + Computer Engineering + Data Science Student at Southern Methodist
 					University
 				</h4>
 				<h4> Class of 2022
@@ -50,7 +50,7 @@
 				<br> <br />
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">About Me</a></li>
-					<li><a href="https://drive.google.com/file/d/1A8YSt89S-eC3VUK9lM494u3HW26dmDof/view?usp=sharing" class="button scrolly">View My Resume</a></li>
+					<li><a href="https://drive.google.com/file/d/17yzNyTGcUnt_df6MLJjGTQGkzh9Yr7rv/view?usp=sharing" class="button scrolly">View My Resume</a></li>
 				</ul>
 			</div>
 		</section>
@@ -62,10 +62,9 @@
 				<div class="content">
 					<div class="inner">
 						<h2>About Me</h2>
-						<p>I am a junior at Southern Methodist University who is very ambitious and enthusiastic to be
-							entering the industry hoping for an opportunity that will harness my detailed-oriented
-							personality and 'can-do' attitude. I am looking to enter the engineering industry that will
-							expose me to innovation that will change the world by connecting people and ideas.</p>
+						<p>Hi! I am a junior at Southern Methodist University who is very ambitious and enthusiastic to be entering the industry hoping for an opportunity that will harness my detailed-oriented personality and 'can-do' attitude. 
+							I am interested in exploring opportunities in software full stack development, web-development/design, data science, as well as project management. 
+							I am looking to enter industries that will expose me to innovation that will influence the world by connecting people and ideas.</p>
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/annalise-sumpon" class="button">Connect with me on
 									LinkedIn</a></li>
@@ -96,7 +95,7 @@
 						</ul>
 					</div>
 				</div>
-				<a href="#" class="image"><img src="images/knowledge-icon-png-6.jpg.png" alt=""
+				<a class="image"><img src="images/knowledge-icon-png-6.jpg.png" alt=""
 						data-position="center center" /></a>
 			</section>
 		</section>
@@ -246,12 +245,6 @@
 					<section>
 						<ul class="contact">
 							<li>
-								<h3>Address</h3>
-								<span>1209 Clearwater Drive <br />
-									Frisco, TX 75036<br />
-									USA</span>
-							</li>
-							<li>
 								<h3>Email</h3>
 								<a href="asumpon@gmail.com">asumpon@gmail.com</a>
 							</li>
@@ -278,9 +271,6 @@
 											class="icon brands fa-linkedin-in"> LinkedIn <span
 												class="label">LinkedIn</span></a></li>
 									<p></p>
-									<li><a href="https://www.instagram.com/annalisesumpon/"
-											class="icon brands fa-instagram"> Instagram <span
-												class="label">Instagram</span></a></li>
 								</ul>
 							</li>
 						</ul>
