added new line to welcome

--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
 			<div class="inner">
 				<!--	<a href="#" class="profile"><img src="images/pic01.jpeg" alt="" data-position="center center" /></a>-->
 				<h1>Annalise Sumpon</h1>
-				<h4> B.S. Management Science + Mathematics + Computer Engineering + Data Science Student at Southern Methodist
-					University
+				<h4> B.S. Management Science + Mathematics + Computer Engineering + Data Science Student
 				</h4>
-				<h4> Class of 2022
+				,<h4>Southern Methodist University</h4>
+				<h4> 
+					Class of 2022
 				</h4>
 				<br> <br />
 				<ul class="actions">
