--- a/index.html
+++ b/index.html
@@ -42,12 +42,9 @@
 			<div class="inner">
 				<!--	<a href="#" class="profile"><img src="images/pic01.jpeg" alt="" data-position="center center" /></a>-->
 				<h1>Annalise Sumpon</h1>
-				<h4> B.S. Management Science + Mathematics + Computer Engineering + Data Science Student
-				</h4>
-				,<h4>Southern Methodist University</h4>
-				<h4> 
-					Class of 2022
-				</h4>
+				<h4> B.S. Management Science + Mathematics + Computer Engineering + Data Science Student</h4>
+				<h4>Southern Methodist University</h4>
+				<h4>Class of 2022</h4>
 				<br> <br />
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">About Me</a></li>
@@ -105,9 +102,6 @@
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>Experiences</h2>
-				<!-- <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat
-					malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-					imperdiet est velit quis lorem.</p>-->
 				<div class="features">
 					<section>
 						<h3>Software Developer Labs Intern</h3>
